# katas-cpp

./: CMakeLists.txt  build.sh  run  run.sh
src/bowling/: README.md  game.cpp  game.hpp
tests/: bowling_tests.cpp
